<resources>
    <string name="app_name">Mobilprogramozás</string>
    <string name="hello_world">Szia Világ</string>
    <string name="iranyitoszam">Irányítószám</string>
    <string name="varos">Város</string>
    <string name="utca">Utca</string>
    <string name="hazszam">Házszám</string>
    <string name="szerzodes_elfogadas">Elfogadom a szerződési feltételeket</string>
    <string name="kuldes">Küldés</string>
    <string name="kepGomb">Kép készítése</string>
    <string name="dolgozok">Dolgozók</string>
    <string name="azonosito">Dolgozó Azonosító</string>
    <string name="vezeteknev">Vezetéknév</string>
    <string name="keresztnev">Keresztnév</string>
    <string name="fizetes">Fizetés</string>
</resources>